ajout du footer

--- a/accueil.html
+++ b/accueil.html
@@ -42,6 +42,10 @@
             </div>
         </main>
 
+        <footer class="hero-footer">
+         <p>&copy; 2025 – Voyage & Saveurs</p>
+        </footer>
+
     </div>
 
 </body>
