ajout des images

--- a/html/france.html
+++ b/html/france.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <title>France – Voyage &amp; Saveurs</title>
 
-  <!-- Police Google -->
+
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <!-- CSS spécifique à la France -->
+
   <link rel="stylesheet" href="france1.css">
 </head>
 <body>
@@ -24,3 +24,36 @@
       <a href="turquie.html">Turquie</a>
     </nav>
   </header>
+
+    <main class="page">
+
+    <section class="intro-fr">
+      <p class="intro-kicker">Escale en France 🇫🇷</p>
+
+    <h1 class="intro-title">
+      Saveurs <span>françaises</span> <span class="intro-code">FR</span>
+    </h1>
+      
+      <p class="intro-text">
+        La gastronomie française est réputée dans le monde entier pour sa diversité
+        et son raffinement. Des baguettes croustillantes aux fromages affinés,
+        en passant par les plats mijotés et les pâtisseries délicates, chaque
+        région offre ses spécialités uniques.
+      </p>
+    </section>
+
+<div class="photo photo-1">
+          <img src="image/france/soupe-oignon.webp" alt="Soupe à l’oignon gratinée">
+        </div>
+
+        <div class="photo photo-2">
+          <img src="image/france/boeuf-bourguignon.jfif" alt="Bœuf bourguignon">
+        </div>
+
+        <div class="photo photo-3">
+          <img src="image/france/Ratatouille.webp" alt="Ratatouille">
+        </div>
+
+        <div class="photo photo-4">
+          <img src="image/france/Paris-Brest.jpg" alt="Paris-Brest">
+        </div>
