description des images

--- a/html/france.html
+++ b/html/france.html
@@ -57,3 +57,63 @@
         <div class="photo photo-4">
           <img src="image/france/Paris-Brest.jpg" alt="Paris-Brest">
         </div>
+
+        <article class="zoom-text zoom-default">
+          <h2>Choisis un plat</h2>
+          <p>
+            À gauche, quatre plats emblématiques de la gastronomie française :
+            soupe à l’oignon, bœuf bourguignon, ratatouille et Paris-Brest.
+          </p>
+          <span class="tag-plat">Survole une assiette pour en savoir plus</span>
+        </article>
+
+
+        <article class="zoom-text zoom-1">
+          <h2>Soupe à l’oignon</h2>
+          <p>
+            Plat typique des bistrots parisiens, la soupe à l’oignon était
+            à l’origine un plat simple de paysans. Aujourd’hui, on la déguste
+            gratinée au four, avec du pain et une généreuse couche de fromage fondu.
+          </p>
+          <span class="tag-plat">Entrée chaude • Confort food</span>
+        </article>
+
+
+        <article class="zoom-text zoom-2">
+          <h2>Bœuf bourguignon</h2>
+          <p>
+            Ce ragoût mijoté au vin rouge vient de Bourgogne, région célèbre
+            pour ses vignobles. La viande cuit longtemps avec carottes, oignons
+            et lardons jusqu’à devenir ultra fondante.
+          </p>
+          <span class="tag-plat">Plat principal • Cuisine de terroir</span>
+        </article>
+
+        <article class="zoom-text zoom-3">
+          <h2>Ratatouille</h2>
+          <p>
+            Mélange de légumes du sud (courgettes, aubergines, tomates, poivrons),
+            mijotés à l’huile d’olive avec des herbes de Provence. On la mange
+            seule ou en accompagnement.
+          </p>
+          <span class="tag-plat">Plat végétarien • Saveurs du sud</span>
+        </article>
+
+
+        <article class="zoom-text zoom-4">
+          <h2>Paris-Brest</h2>
+          <p>
+            Dessert en forme de couronne créé en 1910 pour la course cycliste
+            Paris-Brest-Paris. Pâte à choux garnie d’une crème pralinée
+            très gourmande et parsemée d’amandes.
+          </p>
+          <span class="tag-plat">Dessert • Pâtisserie française</span>
+        </article>
+
+      </div>
+    </section>
+
+  </main>
+
+</body>
+</html>
