--- a/france.html
+++ b/france.html
@@ -27,8 +27,8 @@
 
     <main class="page">
 
-    <section class="intro-fr">
-      <p class="intro-kicker">Escale en France 🇫🇷</p>
+    <section class="zoom-fr">
+      <p class="intro-kicker">Escale en France </p>
 
     <h1 class="intro-title">
       Saveurs <span>françaises</span> <span class="intro-code">FR</span>
