creation italie.css

--- a/france.html
+++ b/france.html
@@ -27,7 +27,7 @@
 
     <main class="page">
 
-    <section class="zoom-fr">
+    <section class="intro-fr">
       <p class="intro-kicker">Escale en France </p>
 
     <h1 class="intro-title">
@@ -41,6 +41,9 @@
         région offre ses spécialités uniques.
       </p>
     </section>
+
+    <section class="zoom-fr">
+      <div class="zoom-wrapper">
 
 <div class="photo photo-1">
           <img src="image/france/soupe-oignon.webp" alt="Soupe à l’oignon gratinée">
