creation contact.html et contact.css

--- a/japon.html
+++ b/japon.html
@@ -24,6 +24,7 @@
       <a href="japon.html" class="nav-active-jp">Japon</a>
       <a href="maroc.html">Maroc</a>
       <a href="turquie.html">Turquie</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
