--- a/maroc.html
+++ b/maroc.html
@@ -24,6 +24,7 @@
       <a href="japon.html">Japon</a>
       <a href="maroc.html" class="nav-active-ma">Maroc</a>
       <a href="turquie.html">Turquie</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
