--- a/turquie.html
+++ b/turquie.html
@@ -24,6 +24,7 @@
       <a href="japon.html">Japon</a>
       <a href="maroc.html">Maroc</a>
       <a href="turquie.html" class="nav-active-tr">Turquie</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
