--- a/accueil.html
+++ b/accueil.html
@@ -39,6 +39,7 @@
                <a href="japon.html" class="pays-link">Japon</a>
                <a href="maroc.html" class="pays-link">Maroc</a>
                <a href="turquie.html" class="pays-link">Turquie</a>
+               <a href="contact.html" class="pays-link">Contact</a>
             </div>
 
         </div>
