--- a/france.html
+++ b/france.html
@@ -22,6 +22,7 @@
       <a href="japon.html">Japon</a>
       <a href="maroc.html">Maroc</a>
       <a href="turquie.html">Turquie</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
