--- a/france.html
+++ b/france.html
@@ -32,7 +32,7 @@
       <p class="intro-kicker">Escale en France </p>
 
     <h1 class="intro-title">
-      Saveurs <span>françaises</span> <span class="intro-code">FR</span>
+      Saveurs <span>françaises</span> 
     </h1>
       
       <p class="intro-text">
