remplacer "accueil" par "index"

--- a/france.html
+++ b/france.html
@@ -16,7 +16,7 @@
     <div class="logo">VOYAGE &amp; SAVEURS</div>
 
     <nav class="main-nav">
-      <a href="accueil.html">Accueil</a>
+      <a href="index.html">Accueil</a>
       <a href="france.html" class="active">France</a>
       <a href="italie.html">Italie</a>
       <a href="japon.html">Japon</a>
